fixed nav bar spacing.

--- a/Theme/Workspace/SuiteDynamics_Custom_Theme/Modules/Header/Sass/_header-menu.scss
+++ b/Theme/Workspace/SuiteDynamics_Custom_Theme/Modules/Header/Sass/_header-menu.scss
@@ -51,7 +51,6 @@
 	display: block;
 	position: relative;
 
-	padding: $sc-padding-lv2;
 	margin-right: $sc-main-navigation-link-margin-right;
 
 	color: $sc-main-navigation-link-color;
